app-code/lidarr/lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"

      securityContext:
        seccompProfile:
          type: Unconfined
        appArmorProfile:
          type: Unconfined

      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8686
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            # THE FIX: Mounts the isolated audio_pool directly to /data
            - name: audio-pool
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: audio-pool
          hostPath:
            path: /mnt/audio_pool
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr-svc
  namespace: media
spec:
  selector:
    app: lidarr
  type: NodePort
  ports:
    - name: http
      port: 8686
      targetPort: 8686
      nodePort: 30468
