app-code/lidarr/lidarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`lidarr.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: lidarr-svc, port: 8686}]
